# hi-gui

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/: higui.h
include/higui/object-logic/: object.h
include/higui/parser/: base.h  markup.h  parser.h
include/higui/parser/himl/: himl.h  indent.h  line.h  section.h
include/object-logic/: transform.h
include/parser/: html.h  parser.h
src/: CMakeLists.txt  DOM.cpp  DOM.h  any_map.h  attribute.cpp  attribute.h  component.cpp  component.h  custom_any.cpp  custom_any.h  gui_object.cpp  gui_object.h  higui.cpp  higui.h  hitypes.cpp  hitypes.h  html_parser.cpp  html_parser.h  main.cpp  markup.cpp  markup.h  markup_parser.cpp  markup_parser.h  object.cpp  object.h  shader.cpp  shader.h  style.h  style_parser.cpp  style_parser.h
src/markup_elements/: div.cpp  div.h  div_element.cpp  div_element.h
src/parser/: base.cpp  html.cpp  markup.cpp  parser.cpp
src/parser/himl/: himl.cpp  indent.cpp  line.cpp  section.cpp
